Background image fixed, so now no white space anymore

--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
 * {box-sizing: border-box;}
 
+html {
+  background: url("pictures/Background.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url("pictures/Background.jpg");
   background-repeat: no-repeat;
   background-position: right top;
   margin-right: 0px;
