--- a/style_about.css
+++ b/style_about.css
@@ -46,8 +46,8 @@ body {
 }
 
 .header a.active {
-  background-color: #000000;
-  color: #000000;
+  background-color: #223845;
+
 }
 
 .header-right {
@@ -504,7 +504,6 @@ h2 {
   display: inline-block;
   padding: 8px;
   color: white;
-  background-color: #000;
   text-align: center;
   cursor: pointer;
   width: 100%;
